# McDevol

./: .gitattributes  README.md  environment.yml  setup.py
.github/workflows/: McDevol_GPU.yml  python-package-conda.yml  release.yml
mcdevol/: byol_model.py  clustering.py  dataparsing.py  mcdevol.py  pyproject.toml
mcdevol/genomeface_weights/: general_t2eval.m.data-00000-of-00001  general_t2eval.m.index  model9_eval.m.data-00000-of-00001  model9_eval.m.index
tests/: test_byol_model.py  test_clustering.py  test_dataparsing.py
util/: aligner2counts.cpp  convertfasta_multi2single.cpp  get_sequence_bybin.cpp
